# CoralOS-Agentic

./: .dockerignore  .env.example  .gitignore  API.md  CLAUDE.md  CONTRIBUTING.md  CORAL-IMPLEMENTATION.md  CORAL.md  LLM.md  PAY.md  PLAN.md  README.md  ROADMAP.md  SKILLS.md  TROUBLESHOOTING.md  TXODDS.md  build-agents.sh  docker-compose.yml  justfile  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
coral-agents/: README.md
coral-agents/broker/: Dockerfile  README.md  package.json
coral-agents/buyer-agent/: Dockerfile  README.md  coral-agent.toml  package.json
coral-agents/echo-agent/: Dockerfile  README.md  package.json
coral-agents/seller-agent/: Dockerfile  Dockerfile.claude  README.md  coral-agent.toml  package.json
coral-agents/seller-claude/: coral-agent.toml
coral-agents/seller-moves/: coral-agent.toml
coral-agents/seller-scribe/: coral-agent.toml
coral-agents/seller-stats/: coral-agent.toml
coral-agents/seller-worldcup/: coral-agent.toml
coral-agents/signal-agent/: Dockerfile  README.md  coral-agent.toml  package.json  tsconfig.json
coral-agents/user_proxy/: README.md
docker/: coral-server.Dockerfile  patchbond-signer.Dockerfile
docs/: AGENT_DEPTH_PLAN.md  AGENT_ORCHESTRATION.md  BUYER_VERIFIER_LOOPS.md  E2E_AGENTIC_DECISIONS.md  PAYMENT_RAIL_INTEGRATION.md  PRODUCTION_READINESS.md  REACT_FRONTEND.md
examples/: README.md
examples/txodds-agent-desk/src-tauri/: Cargo.toml  tauri.conf.json
examples/txodds-agent-desk/src-tauri/capabilities/: default.json
examples/txodds-agent-desk/src-tauri/src/: main.rs
examples/txodds/escrow/programs/arbiter/: Cargo.toml
examples/txodds/escrow/programs/arbiter/src/: lib.rs
examples/txodds/escrow/programs/escrow/: Cargo.toml
examples/txodds/escrow/programs/escrow/src/: lib.rs
proofs/: devnet-policy-signer-round.json
scripts/: README.md  build-agent-images.js  coral-console-e2e.mjs  devnet-e2e.mjs  provision-swarm.js  readiness-e2e.mjs  rotate-devnet-wallet.js  run-example.js  setup.js  stop-agents.js  txodds-agentic.js  txodds.js
(+175 files in other folders)
